--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,13 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+	<title>Hello world</title>
+</head>
+<h1> welcome </h1>
 
+<body>
+	this is a test
+
+</body>
+</html>
